edit team jpg name to solve not showing.

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -215,7 +215,7 @@ small, .small {
 // }
 
 section.login{
-  background: url(image_path('team-bg.jpg'))
+  background: url(image_path('team.jpg'))
   no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
